--- a/cmbyn/Info.plist
+++ b/cmbyn/Info.plist
@@ -50,5 +50,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSContactsUsageDescription</key>
+	<string>$(PRODUCT_NAME) need save VoIP Number to your contacts.</string>
 </dict>
 </plist>
